refactor(security): standardize CORS origins fallback across microservices